# Bot-of-Justice

./: Cargo.toml  PKGBUILD  README.md
src/: command.rs  configs.rs  main.rs  prompts.rs
src/extentions/: mod.rs
src/extentions/conversions/: currency.rs  mod.rs  temp.rs
src/extentions/meta/: info.rs  license.rs  mod.rs
src/extentions/randomize/: mod.rs  random_choice.rs
src/extentions/simple/: echo.rs  mod.rs
src/extentions/time/: mod.rs  timeh.rs
src/extentions/wiki/: wiki.rs
