[package]
name = "LinuxMasterRaceBot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.26"
ini = "1.3.0"
once_cell  = "*"