[package]
name = "bot_of_justice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.26"
toml = "0.5.9"
rand = "0.8.5"
once_cell  = "1.16.0"
currency_rs = "1.1.2"
serde = "1.0.147"
serde_derive = "1.0.147"

# Extention Dependencies
truncrate = "0.1.3"
wikipedia = {git = "https://github.com/El-Wumbus/wikipedia-rs"}
# json = "0.12.4"

[[bin]]
name="boj"
path = "src/main.rs"