[package]
name = "bot_of_justice"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
structopt = "0.3"
toml = "0.5"
rand = "0.8"
once_cell  = "1.16"
currency_rs = "1.1"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
tokio_schedule = "0.3"
chrono = "0.4"
wd_log = "0.1" # logging
structstruck = "*"

# Extention Dependencies
truncrate = "0.1"
wikipedia = {git = "https://github.com/El-Wumbus/wikipedia-rs"}
json = "0.12" # For Echange rate api usage
reqwest = { version = "0.11", features = ["json"] } # for api web requests
platform-dirs = "0.3"
serde_json="1.0"

[[bin]]
name="boj"
path = "src/main.rs"